添加全屏播放器页面和优化popup界面

--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,12 @@
       "run_at": "document_end"
     }
   ],
+  "web_accessible_resources": [
+    {
+      "resources": ["player.html", "player.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'; media-src 'self' https://www.youtube.com https://www.bilibili.com"
   }
